# tb-vladimir-study

./: .gitignore  .pre-commit-config.yaml  Analytical Framework Implementation Plan.md  Descriptive Study Plan.md  Makefile  PRD.md  README.md  _smoke_test_funnel_chart.py  pyproject.toml
.obsidian/: workspace.json
Data/raw/: VladKovMur_dataset.csv
Documentation/: DataSet Description (English).md  DataSet Description.docx
Evaluation/: Expert summary 01.md  Экспертное резюме 01.md
notebooks/: .gitkeep
r/: .Rbuildignore  .gitignore  DESCRIPTION  Makefile  NAMESPACE  README.md
r/R/: cascade.R  config.R  derive.R  io.R  qc.R  schema.R  trends.R  viz.R
r/man/: CENSORING_WINDOW_MONTHS.Rd  DATE_ORDER_SEQUENCE.Rd  INITIATION_TARGET_DAYS.Rd  N_ROWS_EXPECTED.Rd  SITE_COLORS.Rd  SMALL_CELL_THRESHOLD.Rd  TARGET_GROUP_LABELS.Rd  adherence_ratio.Rd  adherence_summary.Rd  audit_missingness.Rd  build_analysis_table.Rd  build_schema_agent.Rd  cascade_flags.Rd  censoring_flag.Rd  check_age_range.Rd  check_date_order.Rd  check_diagnosis_mutual_exclusivity.Rd  check_dose_consistency.Rd  check_duplicate_registrations.Rd  check_outcome_mutual_exclusivity.Rd  check_treat_group_onehot.Rd  compute_age.Rd  contacts_per_index_case.Rd  (+49 more)
report/: .gitkeep  descriptive_report.md  descriptive_report.qmd  descriptive_report_ru.md  descriptive_report_ru.qmd  i18n_labels.py  i18n_ru.py
reports/: .gitkeep
scripts/: run_cascade.py  run_derive.py  run_qc.py
tests/: test_cascade.py  test_cleaning_list.py  test_cli.py  test_derive.py  test_io.py  test_qc.py  test_trends.py  test_viz.py
(+23 files in other folders)
